- quick fix to some bug with running the command raw/not supported args